[gd_scene load_steps=13 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/course_tiles1.tres" type="MeshLibrary" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Arrow.tscn" type="PackedScene" id=5]
[ext_resource path="res://GimbalOut.gd" type="Script" id=6]
[ext_resource path="res://assets/audio/Swing.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/golfball.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/nature-sketch.ogg" type="AudioStream" id=9]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 0.976471, 0.968627, 0.968627, 1 )
ambient_light_energy = 2.0
ssao_enabled = true
ssao_radius = 4.0
ssao_intensity = 2.0
ssao_color = Color( 0.0470588, 0.0431373, 0.0431373, 1 )
ssao_quality = 2
ssao_edge_sharpness = 10.0
dof_blur_far_enabled = true
dof_blur_far_distance = 5.0

[sub_resource type="SphereShape" id=3]
radius = 0.218032

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( 65534, 0, 6, 65534, 1, 12, 65534, 2, 12, 65534, 3, 12, 65534, 4, 12, 65534, 5, 12, 0, 6, 1048588, 1, 6, 1441798, 65531, 6, 1048587, 65532, 6, 1048588, 65533, 6, 1048588, 65534, 6, 655363, 65535, 6, 1048588 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.881931, -0.00916935, 0.471289, 0.189128, 0.908924, 0.371603, -0.431773, 0.416862, -0.799874, 0, 6.46985, 0 )
fov = 102.217

[node name="Camera2" type="Camera" parent="."]
transform = Transform( -0.940723, 3.50447e-009, -0.339176, -0.201103, 0.805263, 0.557772, 0.273126, 0.592918, -0.757529, -5.62345, 10.9427, -3.27307 )
near = 1.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Tee" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.89116, 1.30369, 1.45544 )

[node name="Hole" type="Area" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.55593, 0.725986, 13.0163 )

[node name="CollisionShape" type="CollisionShape" parent="Hole"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.158044, -0.016439, -0.0183125 )
shape = SubResource( 3 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.98939, 1.71968, 2.41671 )
gravity_scale = 2.0
continuous_cd = true
linear_damp = 0.5
angular_damp = 0.1

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="Arrow" parent="." instance=ExtResource( 5 )]

[node name="GimbalOut" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.0054, 2.95499, 6.98175 )
script = ExtResource( 6 )

[node name="GimbalIn" type="Spatial" parent="GimbalOut"]

[node name="Camera" type="Camera" parent="GimbalOut/GimbalIn"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
current = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.495753, -0.846383, -0.194591, 0.753672, 0.307955, 0.58064, -0.431519, -0.434511, 0.790564, 0, 4.94128, 6.62569 )
shadow_enabled = true

[node name="AudioSwing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="AudioPut" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="AudioBackground" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -30.0
autoplay = true
[connection signal="body_entered" from="Hole" to="." method="_on_Hole_body_entered"]
[connection signal="stopped" from="Ball" to="." method="_on_Ball_stopped"]
